<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bgm2"
    tools:context="com.example.sha.agro.Main2Activity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="22sp"
                android:textColor="#FFFF"
                android:id="@+id/Home"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_below="@id/Home"
                android:text="@string/items"
                android:textSize="14sp"
                android:textColor="#FFFF" />

            <ImageView
                android:layout_alignParentRight="true"
                android:src="@drawable/agro_logo"
                android:layout_width="62dp"
                android:layout_height="62dp" />
        </RelativeLayout>

        <GridLayout
            android:id="@+id/gridlayout"
            android:foregroundGravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:rowCount="1">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_rowWeight="1"
                app:cardCornerRadius="50dp"
                android:clickable="true"
                app:cardElevation="6dp">

               <LinearLayout
                    android:id="@+id/shops"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_login_two"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:layout_marginBottom="2.5dp"
                        android:text="@string/shops"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_rowWeight="1"
                style="@style/Base.TextAppearance.AppCompat.Body1"

                app:cardCornerRadius="50dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:id="@+id/agriculture_news"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/background_login_two"

                    android:orientation="vertical"
                    android:padding="16dp">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:layout_marginBottom="2.5dp"
                        android:text="@string/agriculturenews"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_rowWeight="1"
                app:cardCornerRadius="50dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:id="@+id/bank_loans"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:layout_marginBottom="2.5dp"
                        android:text="@string/bankloans"
                        android:textColor="#23A7D8"
                        android:textSize="20sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_rowWeight="1"
                app:cardCornerRadius="50dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:id="@+id/hospitals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:layout_marginBottom="2.5dp"
                        android:text="@string/hospital"
                        android:textColor="#23A7D8"
                        android:textSize="20sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:layout_margin="12dp"
                android:layout_rowWeight="1"
                app:cardCornerRadius="50dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:id="@+id/research_centres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/research"
                        android:textColor="#23A7D8"
                        android:textSize="20sp" />




                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_rowWeight="1"
                android:clickable="true"
                app:cardCornerRadius="50dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:id="@+id/pharmacy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:layout_marginBottom="2.5dp"
                        android:text="@string/pharmacy"
                        android:textColor="#23A7D8"
                        android:textSize="20sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_rowWeight="1"
                app:cardCornerRadius="50dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:id="@+id/helpline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"

                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:layout_marginBottom="2.5dp"
                        android:text="@string/helpline"
                        android:textColor="#23A7D8"
                        android:textSize="20sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </GridLayout>


    </LinearLayout>



</ScrollView>
